Implemented resume edit and user profile page

--- a/template/header.html
+++ b/template/header.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">DYRO</a>
+    <a class="navbar-brand" href="/">DYRO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav navbar-left">
         <li class="nav-item">
-          <a class="nav-link" href="/">Home</a>
+          <a class="nav-link" href="/">Preview</a>
         </li>
 
       </ul>
@@ -14,11 +14,21 @@
       <ul class="nav navbar-nav navbar-right">
         {% if user.is_authenticated %}
         <li class="nav-item">
-          <a class="nav-link" href="#">Edit Resume</a>
+          <a class="nav-link" href="/resume-edit/">Edit Resume</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/accounts/logout/">Logout</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/profile/">{{ user.get_username }}</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="/accounts/signup/">Sign Up</a>
+        </li>        
+        <li class="nav-item">
+          <a class="nav-link" href="/accounts/login/">Sign In</a>
+        </li>                
         {% endif %}
       </ul>
 
