--- a/template/base.html
+++ b/template/base.html
@@ -2,7 +2,7 @@
 <html lang="en">  
 <head>  
     <meta charset="UTF-8">  
-    <title>Title</title>  
+    <title>Design Your Resume Online</title>  
     {% load static %}  
 
     <link href="{% static 'bootstrap-5.1.3-dist/css/bootstrap.min.css' %}"  rel="stylesheet"> 
