--- a/template/header.html
+++ b/template/header.html
@@ -20,7 +20,7 @@
           <a class="nav-link" href="/accounts/logout/">Logout</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/profile/">{{ user.get_username }}</a>
+          <a class="nav-link" href="/profile/">Profile</a>
         </li>
         {% else %}
         <li class="nav-item">
