--- a/template/header.html
+++ b/template/header.html
@@ -17,6 +17,10 @@
           <a class="nav-link" href="/resume-edit/">Edit Resume</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/resume-pdf/">Download PDF</a>
+        </li>
+        
+        <li class="nav-item">
           <a class="nav-link" href="/accounts/logout/">Logout</a>
         </li>
         <li class="nav-item">
@@ -31,8 +35,6 @@
         </li>                
         {% endif %}
       </ul>
-
-
 
     </div>
   </nav>
