--- a/template/profile.html
+++ b/template/profile.html
@@ -4,29 +4,7 @@
 
 <h2>Welcome: {{user.username}}</h2>
 
-<table class="table">
-    <thead>
-        <th>Fields Name</th>
-        <th>Value</th>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Father's Name </td><td>{{profile.father_name}}</td>
-        </tr>
-        <tr>
-            <td>Email</td><td>{{profile.contact_email}}</td>
-        </tr>
-        <tr>
-            <td>Adderss</td><td>{{profile.address}}</td>
-        </tr>        
-        <tr>
-            <td></td>
-            <td>
-                <a href="/edit-profile/">Update Personal Information</a>
-            </td>
-        </tr>        
-    </tbody>
-</table>
+{% include 'profile_partial.html' %}
 
 
 {% endblock content %}
