--- a/template/resume-edit.html
+++ b/template/resume-edit.html
@@ -3,45 +3,51 @@
 {% block content %}
 
 <h2>{{user.username}}</h2>
+
+
+<form method="POST" action="/save-resume/">
+
 {%csrf_token%}
         
     </div>
     <div class="mb-3">
         <label for="summary" class="form-label">summary</label>
-        <textarea type="summary" class="form-control" id="summary" aria-describedby=""></textarea>
+        <textarea type="summary" class="form-control" id="summary" aria-describedby="" name="form_summary">{{resume.summary}}</textarea>
         </div>
     
     
       <div class="mb-3">
         <label for="skills" class="form-label">skills</label>
-        <textarea type="skills" class="form-control" id="skills" aria-describedby=""></textarea>
+        <textarea type="skills" class="form-control" id="skills" aria-describedby="" name="form_skills">{{resume.skills}}</textarea>
         </div>
 
    
     <div class="mb-3">
         <label for="references" class="form-label">references</label>
-        <textarea type="references" class="form-control" id="Adderss" aria-describedby=""></textarea>
+        <textarea type="references" class="form-control" id="Adderss" aria-describedby="" name="form_references">{{resume.references}}</textarea>
         </div>
 
 
     <div class="mb-3">
         <label for="experience" class="form-label">experience</label>
-        <textarea type="experience" class="form-control" id="experience" aria-describedby=""></textarea>
+        
         </div>
 
         
     <div class="mb-3">
         <label for="education" class="form-label">education</label>
-        <textarea type="education" class="form-control" id="education" aria-describedby=""></textarea>
+
         </div>
 
     <div class="mb-3">
         <label for="personal_details" class="form-label">personal_details</label>
-        <textarea type="personal_details" class="form-control" id="personal_details" aria-describedby=""></textarea>
+        {% include 'profile_partial.html' %}
         </div>
 
     <div>
         <button type="submit" >Save</button>
         </div>
+
+    </form>        
     
     {% endblock content %}]
