releasing new resume edit and preview pages.

--- a/template/base.html
+++ b/template/base.html
@@ -12,18 +12,17 @@
 
     <div class="container">
         
-        <div class="row" style="background-color: rgb(28, 42, 42);">
+        <div class="row mb-md-3" style="background-color: rgb(28, 42, 42);">
             {% include 'header.html' %}
         </div> 
 
 
-        <div class="row">
+        <div class="row mb-md-5">
           <div class="col-sm-12 col-lg-12">
             {% block content %}
             {% endblock content %}
           </div>
         </div>
-
 
         <div class="row">
           <div class="col-sm-12 col-lg-12">
