--- a/template/edit-profile.html
+++ b/template/edit-profile.html
@@ -2,6 +2,9 @@
 
 {% block content %}
 
+<div class="row">
+    <div class="col-md-6">
+      
 <h2>Update Your Personal Information:</h2>
 
 
@@ -37,4 +40,7 @@
 
 </form>
 
+
+</div>
+</div>
 {% endblock content %}
