--- a/template/footer.html
+++ b/template/footer.html
@@ -1,3 +1,15 @@
-<div style="bottom: 0%;position: fixed;">
-    Footer
-</div>
+
+<!-- Remove the container if you want to extend the Footer to full width. -->
+    <!-- Footer -->
+    <footer>
+        <section>
+          <span>Designed & Developed By:</span>
+          <p>
+            Krashanu Yadav, 
+            Kratika Yadav, 
+            Ritika Yadav
+          </p> 
+        </section> 
+    </footer>
+    <!-- Footer -->
+  
