--- a/template/preview.html
+++ b/template/preview.html
@@ -1,55 +1,5 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-<br></br>
-
-<h2>{{user.username}}</h2>
-<p>{{user.profile.contact_email}}</p>
-<p>{{user.profile.contact_number}}</p>
-
-<h3 style="color:red;">Summary:</h3>
-<p>
-    {{user.resume.summary}}
-</p>
-
-<h3 style="color:red;">Skills:</h3>
-<p>{{user.resume.skills}}</p>
-
-
-<h2 style="color:red;">Experience:</h2>
------------------------------------------
-<table class="table">
-
-{% for exp in user.experiences.all %}
-
-<tr>
-    <td>{{exp.job_title}}</td>
-    <td>{{exp.org_name}}</td>
-    <td>{{exp.role}}</td>
-</tr>
-<tr>    
-    <td colspan="3"><b>Responsebilities: </b>{{exp.responsebilities}}</td>
-</tr>
-
-{% endfor %}
-</table>
-
------------------------------------------
-
-
-<p>I am working as a software engineer, having expertise in end-to-end software development
-<br></br>lifecycle and post delivery maintenance. 
-</p>
-
-
-<h3 style="color:red;">Education:</h3>
-<h6>BE - Information Technology
-    University RGTU Bhopal
-    </h6>
-
-<h3 style="color:red;">Personal Details:</h3>
-{% include 'profile_partial.html' %}
-
-
+{% include 'resume_template/default.html' %}
 {% endblock content %}
