--- a/template/profile.html
+++ b/template/profile.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="row">
+    <div class="col-md-6">
+        {% include 'profile_partial.html' %}
+    </div>
+</div>
 
-<h2>Welcome: {{user.username}}</h2>
-
-{% include 'profile_partial.html' %}
 
 
 {% endblock content %}
